kubernetes/base/apps/self-hosted/miniflux/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
  labels:
    app: miniflux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miniflux
  template:
    metadata:
      labels:
        app: miniflux
    spec:
      containers:
      - name: miniflux
        image: ghcr.io/miniflux/miniflux:2.2.19@sha256:8810dfe7f4d9979f9dc1385607695c116f049daa586c635a9a1fb3c58936b074
        ports:
          - containerPort: 8080
            name: http-miniflux
        resources:
          requests:
            cpu: 12m
            memory: 64M
          limits:
            memory: 256M
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
          httpGet:
            path: /healthcheck
            port: 8080
