kubernetes/base/apps/self-hosted/miniflux/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflux-ingress
  annotations:
    gethomepage.dev/description: RSS Reader
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: miniflux.png
    gethomepage.dev/name: Miniflux
    gethomepage.dev/pod-selector: "app=miniflux"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: ca-server-cluster-issuer
    cert-manager.io/common-name: miniflux.internal
spec:
  tls:
    - hosts:
      - miniflux.internal
      secretName: miniflux-ing-cert
  ingressClassName: nginx
  rules:
  - host: miniflux.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: miniflux
            port:
              number: 8080
